# AzFilesAuthenticator

./: .gitignore  Makefile.am  README.md  azfilesauth_1.0-1_amd64.deb  configure.ac  package-azlinux.sh  package-deb.sh  package-rpm.sh  rpm.spec  trigger.txt  trigger1.txt  update-version.sh
.github/: azfilesauth-build.yaml  azfilesauth-release.yaml
.github/workflows/: codeql.yml
debian/: changelog  control  copyright  rules
deploy/EV2_PMC/ServiceGroupRoot/: RollbackSpec.Prod.json  RolloutSpec.Prod.json  ScopeBindings.Prod.json  ServiceModel.Prod.json  version.txt
deploy/EV2_PMC/ServiceGroupRoot/Parameters/: RolloutParameters.ShellExt.json
hooks/: pre-commit  pre-push
include/: AzFilesAuth.h  azfilesauth.h  azfilesauthversion.h.in
src/: azfilesauth.cpp  azfilesauth.h  azfilesauthmanager.py  azfilesrefresh.py  azfilesrefresh.py.in  azfilesrefresh.service
test/: list_cred_op  test.patch  test_imports.py  test_open_handles.sh  test_package_builds.sh  test_unit.py  tests.py
test/distro_run/: azlinux3.containerfile  rhel10.containerfile  rhel9.containerfile  sles15.containerfile  ubuntu20.containerfile  ubuntu22.containerfile  ubuntu24.containerfile
